--- a/android_app/gradle/libs.versions.toml
+++ b/android_app/gradle/libs.versions.toml
@@ -8,6 +8,8 @@ material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.1"
 nav_version = "2.7.7"
+retrofit_version = "2.9.0"
+gson_version = "2.8.9"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -18,7 +20,10 @@ material = { group = "com.google.android.material", name = "material", version.r
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 navigation_fragment = {group = "androidx.navigation", name = "navigation-fragment", version.ref = "nav_version"}
-navigation_ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "nav_version"}
+navigation_ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "nav_version" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit_version" }
+# retrofit_converter = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit_version" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson_version" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
