--- a/android_app/gradle/libs.versions.toml
+++ b/android_app/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ activity = "1.9.3"
 constraintlayout = "2.2.1"
 nav_version = "2.7.7"
 retrofit_version = "2.9.0"
+retrofit_converter_version = "2.9.0"
 gson_version = "2.8.9"
 
 [libraries]
@@ -22,7 +23,7 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 navigation_fragment = {group = "androidx.navigation", name = "navigation-fragment", version.ref = "nav_version"}
 navigation_ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "nav_version" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit_version" }
-# retrofit_converter = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit_version" }
+retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit_converter_version" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson_version" }
 
 [plugins]
